dbeaver/pro#1669 Rest client renewed